Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/typeparams/InvalidLocation.out
InvalidLocation.java:9:23: compiler.err.annotation.type.not.applicable.to.type: A
1 error
