Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/typeparams/InvalidLocation.java
/*
 * @test /nodynamiccopyright/
 * @bug 6843077 8006775
 * @summary check for invalid annotatins given the target
 * @author Mahmood Ali
 * @compile/fail/ref=InvalidLocation.out -XDrawDiagnostics InvalidLocation.java
 */

class InvalidLocation<@A K> {
}

@java.lang.annotation.Target(java.lang.annotation.ElementType.TYPE)
@interface A { }
